-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.0
-
None
-
8182dc12b88727c647f9bac4d9a19914e3cd8307
QPixmap::fill() will deteach, and then copy the old pixmap data, althought this is not necessary since we are going to overwrite that data anyway.
This is a penalty with the raster engine.
See suggested idea of resolution at:
http://codepaster/?command=view&id=9897