Fixed slow QPixmap::fill() when the pixmap is sharing data.

If the pixmap is sharing data with other pixmaps, it must be detached
before it is filled. Instead of detaching by making a copy, create a
new uninitialized data object since all pixels are overwritten by
fill() anyway.

Task-number: QTBUG-3228
Reviewed-by: Trond